--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,45 +15,45 @@
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^3.9.0",
+		"@hookform/resolvers": "^4.1.3",
 		"@phosphor-icons/react": "^2.1.7",
 		"@qdrant/openapi-typescript-fetch": "^1.2.6",
-		"@radix-ui/react-dropdown-menu": "^2.1.2",
-		"@radix-ui/react-tooltip": "^1.1.3",
-		"@tanstack/react-query": "^5.59.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-tooltip": "^1.1.8",
+		"@tanstack/react-query": "^5.67.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.11.9",
-		"jotai": "^2.10.1",
+		"framer-motion": "^12.4.10",
+		"jotai": "^2.12.1",
 		"lodash.debounce": "^4.0.8",
-		"nanoid": "^5.0.7",
-		"next": "15.0.0-rc.1",
-		"next-themes": "^0.3.0",
-		"react": "19.0.0-rc-83825814-20241015",
-		"react-dom": "19.0.0-rc-83825814-20241015",
-		"react-easy-crop": "^5.1.0",
-		"react-focus-lock": "^2.13.2",
-		"react-hook-form": "^7.53.0",
-		"react-intersection-observer": "^9.13.1",
-		"react-remove-scroll": "^2.6.0",
-		"react-responsive": "^10.0.0",
-		"socket.io-client": "^4.8.0",
-		"sonner": "^1.5.0",
-		"zod": "^3.23.8"
+		"nanoid": "^5.1.2",
+		"next": "15.2.1",
+		"next-themes": "^0.4.4",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-easy-crop": "^5.4.1",
+		"react-focus-lock": "^2.13.6",
+		"react-hook-form": "^7.54.2",
+		"react-intersection-observer": "^9.15.1",
+		"react-remove-scroll": "^2.6.3",
+		"react-responsive": "^10.0.1",
+		"socket.io-client": "^4.8.1",
+		"sonner": "^2.0.1",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@csstools/postcss-global-data": "^2.1.1",
-		"@next/bundle-analyzer": "15.0.0-rc.0",
-		"@playwright/test": "^1.48.0",
-		"@tanstack/react-query-devtools": "^5.59.15",
+		"@csstools/postcss-global-data": "^3.0.0",
+		"@next/bundle-analyzer": "15.2.1",
+		"@playwright/test": "^1.50.1",
+		"@tanstack/react-query-devtools": "^5.67.1",
 		"@types/lodash.debounce": "^4.0.9",
-		"@types/node": "^20.16.11",
-		"@types/react": "^18.3.11",
-		"@types/react-dom": "^18.3.1",
+		"@types/node": "^22.13.9",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
 		"autoprefixer": "^10.4.20",
-		"openapi-typescript": "^6.7.6",
-		"postcss": "^8.4.47",
-		"postcss-custom-media": "^10.0.8",
-		"postcss-nesting": "^12.1.5",
-		"typescript": "^5.6.3"
+		"openapi-typescript": "^7.6.1",
+		"postcss": "^8.5.3",
+		"postcss-custom-media": "^11.0.5",
+		"postcss-nesting": "^13.0.1",
+		"typescript": "^5.8.2"
 	}
 }
