--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "next dev --turbo",
-		"build": "next build",
+		"build": "NEXT_TELEMETRY_DISABLED=1 next build --turbo",
 		"build:analyze": "ANALYZE=true next build",
 		"start": "next start",
 		"check-types": "tsc --skipLibCheck --noEmit",
@@ -20,36 +20,36 @@
 		"@qdrant/openapi-typescript-fetch": "^1.2.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-tooltip": "^1.1.8",
-		"@tanstack/react-query": "^5.67.1",
+		"@tanstack/react-query": "^5.71.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^12.4.10",
-		"jotai": "^2.12.1",
+		"framer-motion": "^12.6.2",
+		"jotai": "^2.12.2",
 		"lodash.debounce": "^4.0.8",
-		"nanoid": "^5.1.2",
-		"next": "15.2.1",
-		"next-themes": "^0.4.4",
+		"nanoid": "^5.1.5",
+		"next": "15.3.0-canary.26",
+		"next-themes": "^0.4.6",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-easy-crop": "^5.4.1",
 		"react-focus-lock": "^2.13.6",
-		"react-hook-form": "^7.54.2",
-		"react-intersection-observer": "^9.15.1",
+		"react-hook-form": "^7.55.0",
+		"react-intersection-observer": "^9.16.0",
 		"react-remove-scroll": "^2.6.3",
 		"react-responsive": "^10.0.1",
 		"socket.io-client": "^4.8.1",
-		"sonner": "^2.0.1",
+		"sonner": "^2.0.2",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@csstools/postcss-global-data": "^3.0.0",
 		"@next/bundle-analyzer": "15.2.1",
-		"@playwright/test": "^1.50.1",
-		"@tanstack/react-query-devtools": "^5.67.1",
+		"@playwright/test": "^1.51.1",
+		"@tanstack/react-query-devtools": "^5.71.1",
 		"@types/lodash.debounce": "^4.0.9",
-		"@types/node": "^22.13.9",
-		"@types/react": "^19.0.10",
+		"@types/node": "^22.13.14",
+		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
-		"autoprefixer": "^10.4.20",
+		"autoprefixer": "^10.4.21",
 		"openapi-typescript": "^7.6.1",
 		"postcss": "^8.5.3",
 		"postcss-custom-media": "^11.0.5",
