--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,7 +17,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
 		"@phosphor-icons/react": "^2.1.7",
-		"@qdrant/openapi-typescript-fetch": "^1.2.6",
+		"openapi-typescript-fetch": "^2.1.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tanstack/react-query": "^5.71.1",
